@@ -1,6 +1,6 @@
 // ========================================================================
 // gnubiff -- a mail notification program
-// Copyright (c) 2000-2004 Nicolas Rougier
+// Copyright (c) 2000-2005 Nicolas Rougier
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License as
@@ -93,7 +93,7 @@ public:
 				guint authentication = AUTH_SSL,
 				std::string certificate = "",
 				guint timeout = 5);
-	gint close (void);
+	void close (void);
 	gint write (std::string line, gboolean print = true);
 	gint read  (std::string &line,
 				gboolean print = true,
